WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253194
REGRESSION (
259655@main
): [iOS] Crash when opening a PDF after searching for text in a webpage
https://bugs.webkit.org/show_bug.cgi?id=253194
Summary
REGRESSION (259655@main): [iOS] Crash when opening a PDF after searching for ...
Aditya Keerthi
Reported
2023-03-01 14:26:42 PST
rdar://105784161
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2023-03-01 16:27:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10901
EWS
Comment 2
2023-03-02 08:57:04 PST
Committed
261071@main
(ad5c950167f1): <
https://commits.webkit.org/261071@main
> Reviewed commits have been landed. Closing PR #10901 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug